# notebooks

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  notebooks.cabal  pkgs.nix  rise.nix  stack.yaml  updater  versions.json
aeson-fail/: AesonFail.ipynb  AesonFailGHC884.ipynb  carrot.json  default.nix  fixed.nix  orange.json
callcc/: CallCC.ipynb  default.nix  versions.json
chart-diagrams/: Fib.ipynb  default.nix
codensity/: Codensity.ipynb  default.nix
continuations/: Continuation.ipynb  DiscoveringContinuationsWithTypedHoles.ipynb  default.nix
deriving-via/: DerivingVia.ipynb  Parser.ipynb  default.nix
docker/: default.nix
dragon-curve/: DragonCurve.ipynb  default.nix
efficient-combinator-parsers/: EfficientCombinatorParsers.ipynb  default.nix
git-from-scratch/: .gitignore  Git.ipynb  GitPackIndex.ipynb  IHaskellAGit.ipynb  README.md  default.nix  git-from-scratch.cabal  ihaskell.json  nixpkgs.json  stack.yaml  updater  versions.json
git-from-scratch/Git/: Loose.hs
graphviz/: CDCL.ipynb  TarjanSCC.ipynb  default.nix
hamt/: BinaryTreesToHAMTs.ipynb  BinaryTreesToHAMTs.md  HAMT.ipynb  HAMTFull.ipynb  HAMTPresentation.ipynb  HAMTVisualisation.ipynb  HAMTsFromScratch.ipynb  HAMTsWithoutProse.ipynb  HashArrayMappedTrieProgression.ipynb  HashBinaryMappedTree.ipynb  Untitled.ipynb  default.nix
higher-kinded-data/: HigherKindedData.ipynb  default.nix
hs-updater/: Updater.ipynb  default.nix  updater.hs
hvega/: default.nix
inline-r/: InlineR.ipynb  default.nix
intmap/: FastMergeableIntegerMaps.ipynb  default.nix
lambda/: Lambda.ipynb  (+1 more)
(+68 files in other folders)
