name:                git-from-scratch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/git-from-scratch#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
                     , SHA
                     , attoparsec
                     , base16-bytestring
                     , byteable
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , utf8-string
                     , zlib
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/git-from-scratch
